--- a/404.html
+++ b/404.html
@@ -5,8 +5,11 @@ permalink: /404.html
 ---
 
 <div class="text-center">
-  <h1>404</h1>
-  <h2>Page not found</h2>
+  <div class="page-heading">
+    <h1>404</h1>
+    <hr class="small">
+    <span class="page-subheading">Page not found</span>
+    </div>
   <br/>
 
   <div class="text-center">
